# ChronoEffector-AI-Agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  run.sh  vercel.json
.github/workflows/: agent.yml  cd.yml  ci.yml  cli-pypi.yml  cli.yml  frontend.yml  plugin-npm.yml
agent/: .env.example  package-lock.json  package.json  tsconfig.json
agent/src/: agent.ts  aleph-actions.ts  aleph-publisher.ts  aleph.ts  config.ts  generate-wallet.ts  index.ts  llm.ts  summarizer.ts  tools.ts  wallet.ts
agent/src/actions/: aleph.ts  basileus.ts
backend/: .env.example  app.py  orchestrator.py  requirements.txt  router.py  utils.py
backend/agents/: base_agent.py  dexscreener_agent.py  openai_agent.py  swap_agent.py
basileus-agentkit-plugin/: package-lock.json  package.json
basileus-agentkit-plugin/src/: index.ts
cli/: README.md  pyproject.toml
cli/basileus/: __main__.py  aleph.py  async_typer.py  balance.py  constants.py  deploy.py  ens.py  main.py  ssh.py  ui.py  wallet.py
cli/basileus/chain/: balance.py  builder_code.py  constants.py  ens.py  erc8004.py  superfluid.py  swap.py  wallet.py
cli/basileus/commands/: deploy.py  register.py  stop.py
cli/basileus/infra/: aleph.py  scripts.py  ssh.py
frontend/: index.html  main.py  package-lock.json  package.json  requirements.txt  vite.config.ts
frontend/components/: __init__.py  chat_interface.py
frontend/public/: test.css  test.js
frontend/public/.well-known/: farcaster.json
frontend/src/: globals.css  main.tsx  routeTree.gen.ts
frontend/src/hooks/: useActivities.ts  useAgentBalance.ts  useAgentPnl.ts  (+8 more)
(+30 files in other folders)
